# spss-win-wrapper

./: README.md  main.py  pyproject.toml  spss_win_wrapper.py
