[project]
name = "spss-win-wrapper"
version = "0.1.0"
description = "CLI wrapper for launching IBM SPSS through Bottles on Linux"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.scripts]
spss = "spss_win_wrapper:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = true

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
