[project]
name = "spss-win-wrapper"
version = "0.1.0"
description = "CLI wrapper for launching IBM SPSS through Bottles on Linux"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.scripts]
spss = "spss_win_wrapper:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Target Python version
target-version = "py312"

# Enable or disable specific rule sets (see full list in docs)

# Maximum line-length
line-length = 80

# Fix options
fix = true

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "UP", "I", "FURB"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[isort]
known-first-party = ["leap"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator", "pydantic.root_validator"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
